Modify search form and add hitokoto, adjust some css style. On branch modify-search Changes to be committed:        new file:   .gitignore        modified:   layouts/_default/baseof.html        modified:   layouts/index.html        modified:   layouts/partials/head.html        modified:   static/css/main.css        new file:   static/css/search.css        new file:   static/js/init.js        new file:   static/js/search.js

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -2,7 +2,13 @@
 <html lang="{{ with .Site.LanguageCode }}{{ . }}{{ else }}en-US{{ end }}">
   {{- partial "head.html" . -}}
   
-  <body>
+  {{ if .Site.Params.background }}
+    <body onload="init();" 
+      style="background: url({{ .Site.Params.background }}) top fixed no-repeat">
+  {{ else }}
+    <body onload="init();">
+  {{ end }}
+    
     {{- partial "header.html" . -}}
   
     <main>
