--- a/layouts/index.html
+++ b/layouts/index.html
@@ -45,8 +45,9 @@
   </section>
 {{ end }}
 
-<div class="hitokoto">
-  <p id="hitokoto" onclick="hitokoto()"></p>
+<div class="hitokoto" onclick="hitokoto()">
+  <p id="hitokoto"></p>
+  <p id="hitokoto-from"></p>
 </div>
 
 <section class="cards">
