--- a/static/css/search.css
+++ b/static/css/search.css
@@ -36,8 +36,8 @@
     height: 31px;
     line-height: 31px;
     font-size: 15px;
-    font-weight: bold;
-    color: white;
+    font-weight: 700;
+    color: #f44336;
     width: 75px
 }
 
