--- a/static/css/main.css
+++ b/static/css/main.css
@@ -89,14 +89,12 @@ h3 {
  * header
 */
 header {
-  backdrop-filter: blur(.2rem);
-  /* background-color: rgba(0,0,0, 0.5); */
   font-size: 1rem;
   padding: 0.5rem;
 }
 
 header:hover {
-  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(.2rem);
   box-shadow: 0 0 10px rgb(0, 0, 0, 0.6);
   transition: all .4s linear;
 }
@@ -148,7 +146,7 @@ nav ul {
  * search
 */
 .search {
-  backdrop-filter: blur(.1rem);
+  /* backdrop-filter: blur(.1rem); */
   /* background-color: rgba(30, 30, 30, 0.7); */
   /* border-radius: 1.2rem; */
   margin: 2rem auto;
@@ -164,13 +162,12 @@ nav ul {
 .searchbox form {
   /* padding: 1rem 0 0 0; */
   position: relative;
-  background-color: rgba(0, 0, 0, 0.08);
   border-radius: 1rem;
 }
 
 .searchbox form:hover,
 .searchbox form:focus-within {
-  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(.2rem);
   box-shadow: 0 0 10px rgb(0, 0, 0, 0.6);
   transition: all .4s linear;
 }
@@ -201,16 +198,15 @@ nav ul {
 
 .card {
   backdrop-filter: blur(.2rem);
-  background-color: rgba(0, 0, 0, 0.08);
+  /* background-color: rgba(0, 0, 0, 0.08); */
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.6);
   border-radius: 1rem;
   display: grid;
   padding: 1rem;
-  /* box-shadow: 0 0 10px rgb(0, 0, 0, 0.6); */
 }
 
 .card:hover {
   background-color: rgba(0, 0, 0, 0.6);
-  box-shadow: 0 0 10px rgb(0, 0, 0, 0.6);
   transition: all .4s linear;
 }
 
