--- a/static/css/search.css
+++ b/static/css/search.css
@@ -12,15 +12,12 @@
 
 #search-list {
     position: relative;
+    display: inline-flex;
+    margin-bottom: 5px;
 }
 
 .search-group {
-    margin-left: 1rem;
-    position: absolute;
-    top: 0;
-    left: 0;
     z-index: 13;
-    width: 75px
 }
 
 .search-group:hover {
@@ -34,14 +31,13 @@
     font-size: 16px;
     font-weight: 700;
     color: #f44336;
-    width: 75px;
 }
 
 .search-group>span::after {
     content: "\f0da";
     font-family: "Font Awesome 5 Free";
     /* font-size: 15px; */
-    margin: 0 0 0 10px
+    margin: 0 0 0 0.5rem;
 }
 
 .search-group:hover .search-group-list {
@@ -52,7 +48,6 @@
     display: none;
     position: absolute;
     top: 30px;
-    left: 15px;
     padding: 9pt 0;
     width: 20pc;
     border-radius: 15px;
@@ -101,7 +96,6 @@
 
 .group-items {
     display: none;
-    margin-left: 5rem
 }
 
 .group-checked {
@@ -114,11 +108,8 @@
 }
 
 .search-engines {
-    /* white-space: nowrap; */
     margin: 0;
     text-align: left;
-    /* overflow-x: auto; */
-    /* overflow-y: hidden; */
 }
 
 .search-engines label {
@@ -132,7 +123,7 @@
 
 .search-engines li label {
     display: inline-block;
-    padding: 0 6px;
+    padding: 0 0 0 0.5rem;
     font-size: 15px;
     line-height: 31px;
     border-radius: 3px 3px 0 0;
@@ -145,8 +136,8 @@
 }
 
 .search-engines li label span {
-    padding: 0 3px;
-    border-radius: 3px;
+    padding: 5px;
+    border-radius: 5px;
 }
 
 .search-engines input:hover+label span,
@@ -192,6 +183,11 @@
 }
 
 @media screen and (max-width:767px) {
+    .group-items {
+        overflow-x: auto;
+        overflow-y: hidden;
+    }
+
     .search-engines {
         white-space: nowrap;
         overflow: scroll
@@ -206,6 +202,11 @@
 }
 
 @media screen and (max-width:767px) {
+    .group-items {
+        overflow-x: auto;
+        overflow-y: hidden;
+    }
+
     .search-engines {
         white-space: nowrap;
         overflow: scroll
@@ -220,6 +221,11 @@
 }
 
 @media screen and (max-width:768px) {
+    .group-items {
+        overflow-x: auto;
+        overflow-y: hidden;
+    }
+
     .search-engines {
         white-space: nowrap;
         overflow: scroll
