--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -4,7 +4,7 @@
   
   {{ if .Site.Params.background }}
     <body onload="init({{ .Site.Params.hitokoto }});"
-      style="background: url({{ .Site.Params.background }}) top fixed no-repeat">
+      style="background-image: url({{ .Site.Params.background }});">
   {{ else }}
     <body onload="init({{ .Site.Params.hitokoto }});">
   {{ end }}
