--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -4,7 +4,7 @@
     <div class="nav-left">
       <ul>
         {{ range .Site.Params.nav }}
-        <li><a href="{{ .url }}" title="{{ .name }}"><i class="{{ .icon }}"></i></a></li>
+        <li><a target="_blank" href="{{ .url }}" title="{{ .name }}"><i class="{{ .icon }}"></i></a></li>
         {{ end }}
       </ul>
     </div>
