--- a/static/css/main.css
+++ b/static/css/main.css
@@ -210,7 +210,30 @@ nav ul {
   border-radius: 1rem;
   display: grid;
   padding: 1rem;
+  max-height: 120px;
+  overflow-x: hidden;
+  overflow-y: auto;
+  scrollbar-width: none;
 }
+
+/* .card .card-inner {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+  overflow: hidden;
+}
+
+.card .card-inner-scroll {
+  width: calc(100% + 1rem);
+  height: 100%;
+  position: relative;
+  top: 0;
+  left: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+} */
 
 .card:hover {
   background-color: rgba(0, 0, 0, 0.6);
