--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -23,5 +23,9 @@
         </li>
       </ul>
     </div>
+    <!-- Heweather plugin -->
+    {{ if .Site.Params.Heweather }}
+    <div id="he-plugin-simple"></div>
+    {{ end }}
   </nav>
 </header>
