:sparkles: FEATURE: custom theme color
little modification

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -13,7 +13,7 @@
     </main>
 
     <div id="back2top-btn" onclick="smoothScrollToTop();">
-      <i class="fas fa-rocket red"></i>
+      <i class="fas fa-rocket u-theme-f"></i>
     </div>
   
     {{- partial "footer.html" . -}}
