--- a/layouts/index.html
+++ b/layouts/index.html
@@ -50,8 +50,8 @@
 {{ end }}
 
 <div class="hitokoto" onclick="hitokoto()">
-  <p id="hitokoto"><i class="fas fa-spinner red"></i></i></p>
-  <p id="hitokoto-from"><i class="fas fa-spinner red"></i></p>
+  <p id="hitokoto"><i class="fas fa-spinner u-theme-f"></i></i></p>
+  <p id="hitokoto-from"><i class="fas fa-spinner u-theme-f"></i></p>
 </div>
 
 <section class="cards">
@@ -78,7 +78,7 @@
 </section>
 
 <div id="tooltip">
-  <i class="far fa-hand-point-right red"></i>
+  <i class="far fa-hand-point-right u-theme-f"></i>
   <p id="tooltiptext">tooltip</p>
 </div>
 
