--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -6,7 +6,7 @@
         {{ range .Site.Params.nav }}
           <li>
             <a onclick="window.open({{ .url }}, '_blank')" tooltip-text="{{ .name }}" onmouseover="showTooltip(this);"
-              onmouseout="hideTooltip();"><i class="{{ .icon }}"></i></a>
+              onmouseout="hideTooltip();"><i class="{{ .icon }} u-theme-f"></i></a>
           </li>
         {{ end }}
       </ul>
