--- a/static/css/main.css
+++ b/static/css/main.css
@@ -37,41 +37,9 @@ h3 {
   }
 }
 
-
-/* --------------------------
- * colors
-*/
-.amber        { color: rgb(255, 193, 7); }
-.aqua         { color: rgb(0, 255, 255); }
-.black        { color: rgb(0, 0, 0); }
-.blue         { color: rgb(33, 150, 243); }
-.blue-grey    { color: rgb(96, 125, 139); }
-.brown        { color: rgb(121, 85, 72); }
-.cyan         { color: rgb(0, 188, 212); }
-.dark-grey    { color: rgb(97, 97, 97); }
-.deep-orange  { color: rgb(255, 87, 34); }
-.deep-purple  { color: rgb(103, 58, 183); }
-.green        { color: rgb(76, 175, 80); }
-.grey         { color: rgb(158, 158, 158); }
-.indigo       { color: rgb(63, 81, 181); }
-.khaki        { color: rgb(240, 230, 140); }
-.light-blue   { color: rgb(135, 206, 235); }
-.light-green  { color: rgb(139, 195, 74); }
-.light-grey   { color: rgb(241, 241, 241); }
-.lime         { color: rgb(205, 220, 57); }
-.orange       { color: rgb(255, 152, 0); }
-.pale-blue    { color: rgb(221, 255, 255); }
-.pale-green   { color: rgb(221, 255, 221); }
-.pale-red     { color: rgb(255, 221, 221); }
-.pale-yellow  { color: rgb(255, 255, 204); }
-.pink         { color: rgb(233, 30, 99); }
-.purple       { color: rgb(156, 39, 176); }
-.red          { color: rgb(244, 67, 54); }
-.sand         { color: rgb(253, 245, 230); }
-.teal         { color: rgb(0, 150, 136); }
-.white        { color: rgb(255, 255, 255); }
-.yellow       { color: rgb(255, 235, 59); }
-
+.u-theme-f {
+  color: rgb(244, 67, 54);
+}
 
 /* --------------------------
  * efects
@@ -137,7 +105,7 @@ nav ul {
 
 .hitokoto:hover {
   cursor: pointer;
-  text-decoration: underline #f44336;
+  text-decoration: underline #f44336 dotted 2px;
 }
 
 #hitokoto, #hitokoto-from {
